# perspective-taking

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md
src/: main.cpp  main.cpp~
src/demo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  vector_fixed.hpp
src/demo/head_pose_estimation_demo.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
